fixed toast display grow shrink and ellipsis for overflow

--- a/client/src/toast.sass
+++ b/client/src/toast.sass
@@ -1,26 +1,35 @@
 .toast-container
   position: fixed
-  top: 5.3125rem
+  top: 1.25rem
   right: 1.25rem
   z-index: 9999
-  background-color: rgba(255, 255, 255, 0) !important
-  height: auto !important
-  text-align: inherit !important
-
-.toast-message
-  background-color: #333
-  color: #fff
-  padding: 1rem
+  text-align: inherit
+  max-width: calc(100vw - 2.35rem)
+  display: grid
+  grid-gap: 0.4rem
+  grid-template-columns: auto auto
+  align-items: center
+  background-color: rgba(51, 51, 51, 0.8) !important
+  color: #ffffff
+  padding: 0.7rem
   border-radius: 0.25rem
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1)
-  display: flex
-  align-items: center
-  justify-content: space-between
-  text-align: left
+  span
+    line-height: 1.2
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
+  .toast-message
+    grid-column: 2 span
+    &.span1
+      grid-column: 1
 
 .toast-close
-  background: none
-  border: none
-  color: #fff
-  font-size: 20px
+  justify-self: flex-end
+  line-height: 0.5
+  flex: 0 0 auto
+  opacity: 0.3
   cursor: pointer
+
+.toast-close:hover
+  opacity: 1
